# Frame

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  flake.nix  frame.desktop  go.mod  go.sum  main.go  meson.build
.github/workflows/: release.yml
internal/animation/: animation.go
internal/app/: app.go
internal/gui/: cache.go  editor.go  gui.go  styles.go  viewer.go
internal/image/: image.go  operations.go  session.go
internal/keybindings/: bindings.go  keybindings.go
internal/ui/: styles.go  viewer.go  window.go
src/: anim.c  anim.h  app.c  app.h  cache.c  cache.h  exif.c  exif.h  fileops.c  fileops.h  input.c  input.h  loader.c  loader.h  main.c  overlay.c  overlay.h  prefetch.c  prefetch.h  search.c  search.h  utils.c  utils.h  viewer.c  viewer.h
